--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DubaiCryptoOdyssey - Dubai 2025</title>
-    <meta name="description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025. Invitation-only exclusive event for crypto whales, CT influencers, and DeFi pioneers." />
-    <meta name="keywords" content="crypto, whales, Dubai, yacht, exclusive, invitation-only, blockchain, DeFi, CT, crypto twitter" />
-    <meta property="og:title" content="IRL Crypto Whales Odyssey - Dubai 2025" />
-    <meta property="og:description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025." />
-    <meta property="og:type" content="website" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="IRL Crypto Whales Odyssey - Dubai 2025" />
-    <meta name="twitter:description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025." />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!-- Add your custom CSS file if needed, e.g., <link rel="stylesheet" href="/styles.css"> -->
-  </head>
-  <body>
-    <h1>Welcome to DubaiCryptoOdyssey 2025</h1>
-    <p>Join us on August 30, 2025, for an exclusive crypto event aboard a luxury yacht in Dubai Marina!</p>
-    <!-- Add more static HTML content here -->
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>DubaiCryptoOdyssey - Dubai 2025</title>
+<meta name="description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025. Invitation-only exclusive event for crypto whales, CT influencers, and DeFi pioneers." />
+<meta name="keywords" content="crypto, whales, Dubai, yacht, exclusive, invitation-only, blockchain, DeFi, CT, crypto twitter" />
+<meta property="og:title" content="IRL Crypto Whales Odyssey - Dubai 2025" />
+<meta property="og:description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025." />
+<meta property="og:type" content="website" />
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="IRL Crypto Whales Odyssey - Dubai 2025" />
+<meta name="twitter:description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025." />
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<!-- Add your CSS file if needed -->
+</head>
+<body>
+<h1>Welcome to DubaiCryptoOdyssey 2025</h1>
+<p>Join us on August 30, 2025, for an exclusive crypto event aboard a luxury yacht in Dubai Marina!</p>
+</body>
+</html>
