--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
  <meta charset="UTF-8" />
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
- <title DubaiCryptoOdyssey - Dubai 2025</<title>
+ <title>DubaiCryptoOdyssey - Dubai 2025</title>
  <meta name="description" content="The Ultimate Crypto Millionaires' Meetup aboard a luxury yacht in Dubai Marina. August 30, 2025. Invitation-only exclusive event for crypto whales, CT influencers, and DeFi pioneers." />
  <meta name="keywords" content="crypto, whales, Dubai, yacht, exclusive, invitation-only, blockchain, DeFi, CT, crypto twitter" />
  <meta property="og:title" content="IRL Crypto Whales Odyssey - Dubai 2025" />
